Cleanup kill function in ExecUtils.java